--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Ejemplo</title>
 <body>
 	<script src="GoogleFormStyler.js"
-        	form="https://docs.google.com/forms/..../viewform?embedded=true">
+        	form="https://docs.google.com/forms/d/e/1FAIpQLSfG8pdpJIa5feFeaubxy43F-HSxYkhlB9iQX8Y4k9kj_Kv0zg/viewform?embedded=true">
 	</script>
 </body>
 </html>
